fixes on mobile screen

--- a/src/common/home/home.css
+++ b/src/common/home/home.css
@@ -729,6 +729,7 @@
           opacity: 0;
           transition: all 0.2s ease-in-out;
           position: absolute; 
+          left: 13.5rem;
         }
       }
       .prime-sponsors-cta:hover {
@@ -736,7 +737,6 @@
 
         .heart-handshake {
           opacity: 1;
-          margin-left: 13rem;
         }
       }
     }
